*change design    *adding SplashScreenActivity.kt    *sprate histroy form main activity    *adding fullscreen method to view onitemClick *adding intro to explain the application

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,15 @@ android {
 }
 
 dependencies {
+
+
+    //intro for the application
+    implementation 'com.github.fibelatti:MaterialShowcaseView:2.1.0'
+
+    def lottieVersion = "3.4.0"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
+
+
     def room_version = "2.2.5"
 
     implementation "androidx.room:room-runtime:$room_version"
